--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
     <div class="container-fluid spinner-container">
       <div class="spinner position-fixed d-flex flex-column align-items-center gap-3">
         <div class="spinner-border text-warning" role="status"></div>
-        <span class="text-dark">Bruno's Loading...</span>
+        <span class="text-dark">Bruno's Bear Loading...</span>
       </div>
     </div>
     <!-- ! END SPINNER -->
+
+    <!-- * -->
     <!-- * START NAVBAR -->
     <nav class="navbar navbar-expand-lg bg-primary position-sticky">
       <div class="container">
-        <a class="navbar-brand" href="#"><i class="bi bi-bootstrap"></i> Bruno's</a>
+        <a class="navbar-brand" href="#"><i class="bi bi-bootstrap"></i> Bruno's Bear</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -36,10 +38,10 @@
               <a class="nav-link" href="#testimonianze">Testimonianze</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="http://facebook.it"><i class="bi bi-facebook"></i> </a>
+              <a class="nav-link" href="http://facebook.it" target="_blank"><i class="bi bi-facebook"></i> </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="http://linkedin.it"><i class="bi bi-linkedin"></i> </a>
+              <a class="nav-link" href="http://linkedin.it" target="_blank"><i class="bi bi-linkedin"></i> </a>
             </li>
           </ul>
         </div>
@@ -185,7 +187,7 @@
               <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
               <textarea class="form-control" id="exampleFormControlTextarea1" rows="1"></textarea>
             </div>
-            <button type="submit">INVIA EMAIL</button>
+            <button type="submit ">INVIA EMAIL</button>
           </div>
         </div>
 
