--- a/index.html
+++ b/index.html
@@ -68,36 +68,38 @@
           <div class="row mt-5">
             <div class="col-3 d-flex flex-column justify-content-center align-items-center">
               <img class="img-fluid" src="./assets/img/partner-one.png" alt="Parter One" />
-              <p class="text-white text-center">Microbear</p>
             </div>
             <div class="col-3 d-flex flex-column justify-content-center align-items-center">
-              <img class="img-fluid" src="./assets/img/partner-two.png" alt="Parter One" />
-              <p class="text-white text-center">AppleBears</p>
+              <div>
+                <img class="img-fluid" src="./assets/img/partner-two.png" alt="Parter Two" />
+              </div>
             </div>
             <div class="col-3 d-flex flex-column justify-content-center align-items-center">
-              <img class="img-fluid" src="./assets/img/partner-three.png" alt="Parter One" />
-              <p class="text-white text-center">WindowBear</p>
+              <img class="img-fluid" src="./assets/img/partner-three.png" alt="Parter Three" />
             </div>
             <div class="col-3 d-flex flex-column justify-content-center align-items-center">
-              <img class="img-fluid" src="./assets/img/partner-four.png" alt="Parter One" />
-              <p class="text-white text-center">PandaGunners</p>
+              <img class="img-fluid" src="./assets/img/partner-four.png" alt="Parter Four" />
+            </div>
+            <p class="col-3 text-white text-center mt-2">Microbear</p>
+            <p class="col-3 text-white text-center mt-2">AppleBears</p>
+            <p class="col-3 text-white text-center mt-2">WindowBear</p>
+            <p class="col-3 text-white text-center mt-2">PandaGunners</p>
+            <div class="col-3 d-flex flex-column justify-content-center align-items-center">
+              <img class="img-fluid" src="./assets/img/partner-five.png" alt="Parter Five" />
             </div>
             <div class="col-3 d-flex flex-column justify-content-center align-items-center">
-              <img class="img-fluid" src="./assets/img/partner-five.png" alt="Parter One" />
-              <p class="text-white text-center">iBear</p>
+              <img class="img-fluid" src="./assets/img/partner-six.png" alt="Parter Six" />
             </div>
             <div class="col-3 d-flex flex-column justify-content-center align-items-center">
-              <img class="img-fluid" src="./assets/img/partner-six.png" alt="Parter One" />
-              <p class="text-white text-center">Grizzly Bear</p>
+              <img class="img-fluid" src="./assets/img/partner-seven.png" alt="Parter Seven" />
             </div>
             <div class="col-3 d-flex flex-column justify-content-center align-items-center">
-              <img class="img-fluid" src="./assets/img/partner-seven.png" alt="Parter One" />
-              <p class="text-white text-center">Hard Bear</p>
+              <img class="img-fluid" src="./assets/img/partner-eight.png" alt="Parter Eight" />
             </div>
-            <div class="col-3 d-flex flex-column justify-content-center align-items-center">
-              <img class="img-fluid" src="./assets/img/partner-eight.png" alt="Parter One" />
-              <p class="text-white text-center">Green Bear</p>
-            </div>
+            <p class="col-3 text-white text-center mt-2">iBear</p>
+            <p class="col-3 text-white text-center mt-2">Grizzly Bear</p>
+            <p class="col-3 text-white text-center mt-2">Hard Bear</p>
+            <p class="col-3 text-white text-center mt-2">Green Bear</p>
           </div>
         </div>
       </section>
