--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- * START NAVBAR -->
     <nav class="navbar navbar-expand-lg bg-primary position-sticky">
       <div class="container">
-        <a class="navbar-brand" href="#"><i class="bi bi-bootstrap"></i> Bruno's Bear</a>
+        <a class="navbar-brand" href="#"><i class="bi bi-bootstrap"></i> Bruno's Bear </a><button id="light-mode" class="btn"></i> <i class="bi bi-eye"></i></button><button id="invert-mode" class="btn"><i class="bi bi-eye-fill"></i></button> 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -180,16 +180,17 @@
           </div>
 
           <div class="col-12 col-md-4 text-white">
-            CONTACT US
+            <p>CONTACT US</p>
             <div class="mb-3">
-              <label for="exampleFormControlInput1" class="form-label">Email address</label>
+              <p>Email Address</p>
               <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com" />
             </div>
             <div class="mb-3">
-              <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+              <p>Example Textarea</p>
               <textarea class="form-control" id="exampleFormControlTextarea1" rows="1"></textarea>
             </div>
-            <button type="submit ">INVIA EMAIL</button>
+            <button class="btn bg-white" type="submit ">INVIA EMAIL</button>
+            
           </div>
         </div>
 
