--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
     <!-- * START NAVBAR -->
     <nav class="navbar navbar-expand-lg bg-primary position-sticky">
       <div class="container">
-        <a class="navbar-brand" href="#"><i class="bi bi-bootstrap"></i> Bruno's Bear </a><button id="light-mode" class="btn"></i> <i class="bi bi-eye"></i></button><button id="invert-mode" class="btn"><i class="bi bi-eye-fill"></i></button> 
+        <a class="navbar-brand" href="#"><i class="bi bi-bootstrap"></i> Bruno's Bear </a>
+        <button id="light-mode" class="btn"></i> <i class="bi bi-eye"></i></button>
+        <button id="invert-mode" class="btn"><i class="bi bi-eye-fill"></i></button> 
+        <button id="heart-mode" class="btn"><i class="bi bi-heart-pulse"></i></button>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
