--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Bruno's - Bear. Vendita di orsacchiotti fatti a mano" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" />
     <link rel="stylesheet" href="./assets/css/app.css" />
+
     <title>Bruno's - Bear</title>
   </head>
   <body>
@@ -23,8 +31,8 @@
     <nav class="navbar navbar-expand-lg bg-primary position-sticky">
       <div class="container">
         <a class="navbar-brand" href="#"><i class="bi bi-bootstrap"></i> Bruno's Bear </a>
-        <button id="light-mode" class="btn"></i> <i class="bi bi-eye"></i></button>
-        <button id="invert-mode" class="btn"><i class="bi bi-eye-fill"></i></button> 
+        <button id="light-mode" class="btn"><i class="bi bi-eye"></i></button>
+        <button id="invert-mode" class="btn"><i class="bi bi-eye-fill"></i></button>
         <button id="heart-mode" class="btn"><i class="bi bi-heart-pulse"></i></button>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -53,7 +61,7 @@
     <!-- ! END NAVBAR -->
     <main data-bs-spy="scroll">
       <!-- * START SECTION HOME-->
-      <section id="home" >
+      <section id="home">
         <div class="container d-flex flex-column justify-content-center align-items-center">
           <img src="./assets/img/bear-hero.png" class="h-50" alt="Bear Bruno" />
           <h1 class="text-primary">Luxury Handmade Bear</h1>
@@ -193,7 +201,6 @@
               <textarea class="form-control" id="exampleFormControlTextarea1" rows="1"></textarea>
             </div>
             <button class="btn bg-white" type="submit ">INVIA EMAIL</button>
-            
           </div>
         </div>
 
@@ -201,7 +208,11 @@
       </div>
     </footer>
     <!-- ! END FOOTER -->
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+      crossorigin="anonymous"
+    ></script>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="./assets/js/script.js"></script>
   </body>
